04-model-training/tensorboard/tensorboard-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: tensorboard
  name: tensorboard
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  selector:
    app: tensorboard
  type: ClusterIP
