04-model-training/tensorboard/tensorboard-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: tensorboard
spec:
  gateways:
  - kubeflow/kubeflow-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /tensorboard/
    route:
    - destination:
        host: tensorboard.admin.svc.cluster.local
    timeout: 300s
